--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-# _config.yml
-
 # 是否启用 Latent Semantic Indexing（潜在语义索引），一般设为 false
 lsi: false
 
@@ -29,7 +27,6 @@ title: 技术分享
 description: 欢迎来到 巳煜 的博客，这里分享我的思考和经验。
 
 # 使用的 Jekyll 主题和插件
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/architect@v0.2.0
 plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
+- jekyll-remote-theme
