--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,6 @@ title: 技术分享
 description: 欢迎来到 巳煜 的博客，这里分享我的思考和经验。
 
 # 使用的 Jekyll 主题和插件
-remote_theme: pages-themes/architect@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
