--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ baseurl: "/blog"
 url: "https://lemonit-eric-mao.github.io/blog"
 markdown: kramdown
 theme: minima
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
+  - jekyll-remote-theme
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-jsonify
