--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 毛巳煜的个人主页
+title: 巳煜的技术博客
 description: 高级解决方案全栈架构师
 github_repo: "https://github.com/lemonit-eric-mao/blog"
 url: "https://lemonit-eric-mao.github.io/blog"
