--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,20 @@ links:
     url: "/search.html"
 markdown: kramdown
 remote_theme: pages-themes/cayman@v0.2.0
+
 plugins:
   - jekyll-remote-theme
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-jsonify
+  - jekyll-seo-tag
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-archives
+  - jekyll-toc
+  - jekyll-minimal-json
+
 
 jsonify:
   collections:
