--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,7 @@ plugins:
   - jekyll-remote-theme
   - jekyll-sitemap
   - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-paginate
-  - jekyll-archives
-  - jekyll-toc
-  - json_generator
+  - jekyll-jsonify
 
 
 jsonify:
