--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 巳煜的技术博客
+title: 技术博客
 description: 如若不能在实践中印证自己的能力，我们所谓的学会和懂得，都毫无意义。
 github_repo: "https://github.com/lemonit-eric-mao/blog"
 url: "https://lemonit-eric-mao.github.io/blog"
@@ -13,10 +13,6 @@ remote_theme: pages-themes/cayman@v0.2.0
 
 plugins:
   - jekyll-remote-theme
-  - jekyll-sitemap
-  - jekyll-feed
-  - jekyll-jsonify
-
 
 jsonify:
   collections:
