--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,4 @@ collections:
   posts:
     output: true
     #permalink: /:categories/:title/
+    permalink: /:categories/:year/:month/:day/:title/
