--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
 
-#jsonify:
-#  collections:
-#    posts
+jsonify:
+  collections:
+    posts
 
 #collections:
 #  posts:
