--- a/_config.yml
+++ b/_config.yml
@@ -21,5 +21,5 @@ jsonify:
 collections:
   posts:
     output: true
-#    permalink: /:categories/:slug/
+    permalink: /:categories/:title/
 #    permalink: /:categories/:year/:month/:day/:slug/
