--- a/_config.yml
+++ b/_config.yml
@@ -21,5 +21,4 @@ jsonify:
 collections:
   posts:
     output: true
-    permalink: /:categories/:title/
-#    permalink: /:categories/:year/:month/:day/:slug/
+    permalink: /:categories/:year/:month/:day/:title:output_ext
