--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,7 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
 
-jsonify:
-  collections:
-    posts
-
 collections:
   posts:
     output: true
-    permalink: /:categories/:year/:month/:day/:title:output_ext
+    permalink: /:title
