--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: 技术博客
 description: 如若不能在实践中印证自己的能力，我们所谓的学会和懂得，都毫无意义。
 github_repo: "https://github.com/lemonit-eric-mao/blog"
-url: "https://lemonit-eric-mao.github.io/blog"
+url: "http://lemonit-eric-mao.github.io/blog"
 baseurl: "/blog"
 links:
   - title: "主页"
